--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -21,7 +21,7 @@
     </ion-item>
   </ion-list>
 
-  <button ion-button full icon-only (click)="Login()">
+  <button ion-button full icon-only (click)="login()">
     <ion-icon name="md-log-in"></ion-icon>เข้าสู่ระบบ</button>
   <br>
   <button ion-button outline full>ลืมรหัสผ่าน</button>
