--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -9,7 +9,7 @@
   <ion-navbar color="title2">
 
 
-    <ion-title>{{item.title}}</ion-title>
+    <ion-title>{{item.name}}</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="OpenCartPage()">
         <ion-icon name="md-cart"></ion-icon>
@@ -24,14 +24,14 @@
 <ion-content >
   <img src="assets/imgs/rec/{{item.image}}">
   <ion-item>
-    <h1>{{item.title}}</h1>
+    <h1>{{item.name}}</h1>
   </ion-item>
   <ion-item>
     <p>จำนวน</p>
     <button ion-button clear icon-only item-end (click)="subTrack(item)">
       <ion-icon name="md-remove-circle" color="dark"></ion-icon>
     </button>
-    <label item-end>{{item.cout}}</label>
+    <label item-end>{{item.cost}}</label>
     <button ion-button clear icon-only item-end (click)="addPlus(item)">
       <ion-icon name="md-add-circle" color="dark"></ion-icon>
     </button>
@@ -40,7 +40,7 @@
 
   <ion-item>
     <p>ราคารวม </p>
-    <p item-end style="margin-right: 175px;">{{item.price * item.cout}} THB</p>
+    <p item-end style="margin-right: 175px;">{{item.price * item.cost}} THB</p>
   </ion-item>
   <ion-item>
     <button ion-button full large round color="order" icon-only>เพิ่มในตะกร้า
