--- a/src/pages/rice/rice.html
+++ b/src/pages/rice/rice.html
@@ -24,7 +24,7 @@
     <img src="assets/imgs/rec/{{item.image}}" (click)="OpenDetailPage(item)">
     <ion-card-content>
       <ion-card-title color="title2">
-        {{item.title}}
+        {{item.name}}
       </ion-card-title>
       <p>{{item.description}}</p>
     </ion-card-content>
