--- a/src/pages/add/add.html
+++ b/src/pages/add/add.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="title2">
-    <ion-title>เพิ่มสินค้า</ion-title>
+    <ion-title>เพิ่มรายการ</ion-title>
   </ion-navbar>
 
 </ion-header>
